# RopeLengthMeasurer

./: LICENSE  README.md
Firmware/rope-length-measure/: Cargo.toml  Makefile  memory.x  rope-length-measure.hex
Firmware/rope-length-measure/.cargo/: config
Firmware/rope-length-measure/src/: counted_length.rs  display.rs  main.rs
electronics/RopeLengthMeasurer/: RopeLengthMeasurer.kicad_pcb  RopeLengthMeasurer.kicad_sch  RopeLengthMeasurer.kicad_sch-bak  RopeLengthMeasurer.pro  RopeLengthMeasurerLibrary.bck  RopeLengthMeasurerLibrary.lib  sym-lib-table
