[package]
authors = ["Ryan Wicks <ryancwicks@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "rope-length-measure"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f411"] # replace the model of your microcontroller here

# this lets you use `cargo fix`!
[[bin]]
name = "rope-length-measure"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
